# dreamberd-interpreter

./: .gitignore  ArrayTesting.db  DownInBoth.db  LICENSE  README.md  StringTesting.db  base.py  create_global_from_issue.py  lexer.py  main.py  public_globals.txt  pyproject.toml  setup.py  syntax_tree.py  test.db
.github/workflows/: create-global.yaml
dreamberd/: __init__.py  base.py  builtin.py  interpreter.py  serialize.py
dreamberd/interpreter/: builtin.py  interpreter.py
dreamberd/processor/: expression_tree.py  lexer.py  syntax_tree.py
examples/: array_testing.db  click.db  mandelbrot.db  other.db  probe.db  scope.db  sierpinski.db  test.db
global_objects/: 408358932
